# TestWork060

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  webapp.py
app/: statistic.py  transactions.py
migration/: env.py
models/: __init__.py  transaction.py
schemas/: transaction.py
settings/: config.py  database.py  loggers.py
task/: update_statistics.py
tasks/: update_statistics.py
tests/: test_api.py  test_transactions.py
