[project]
name = "abelohost"
version = "0.1.0"
description = ""
authors = [
    {name = "Until",email = "kostyuchenko.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "redis (>=6.0.0,<7.0.0)",
    "celery (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
